--- a/style.css
+++ b/style.css
@@ -1,342 +1,449 @@
-* {
+*{
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-    font-family: 'Red Hat Display', sans-serif;
+    font-family: 'poppins',sans-serif;
 }
-html, body {
+body,html{
     overflow-x: hidden;
 }
-header {
+header{
     width: 100%;
-    position: relative;
+    height: 60px;
     display: flex;
-    justify-content: center;
-    height: 5rem;
+    background-color: #fff;
+    z-index: 1;
+    top: 0;
+    justify-content: space-between;
     align-items: center;
+    padding: 30px 30px;
+    border-bottom: 4px solid #e91e63;
+    position: fixed;
 }
-header img {
-    width: 2rem;
+header h1 {
+    color: black;
 }
-.div1 {
-    height: 90vh;
-    width: 100%;
-    background-color: #FAE5EF;
-    display: block;
-    justify-content: center;
-    overflow: hidden;
-}
-.div11 {
-    width: 100%;
-    position: relative;
+.parts{
     display: flex;
-    justify-content: center;
+    gap: 20px;
 }
-.divimg {
-    position: relative;
-}
-.divimg img {
-    width: 750px;
-}
-.divimg span {
-    position: absolute;
-    bottom: 10%;
-    left: 40%;
-    transform: translateX(-80%);
+.parts a{
+    text-decoration: none;
+    font-size: 20px;
+    text-transform: capitalize;
+    color: black;
     font-weight: 600;
-    font-size: 2.5em;
 }
-.div111 {
-    display: grid;
-    justify-content: center;
-    margin-top: 10px;
-    text-align: center;
+.parts a:hover{
+    color: #e91e63;
 }
-.div111 .p1 {
+.boutton{
+    border-radius: 30px;
+    border: solid 3px #e91e63;
+    cursor: pointer;
+    padding: 6px 15px;
+    font-size: 15px;
+    text-decoration: none;
+    color: #e91e63;
     font-weight: 600;
-    font-size: 3.5em;
-    -webkit-text-fill-color: transparent;
-    -webkit-text-stroke-width: 1px;
 }
-.div111 .p11 {
-    width: 100%;
-    font-weight: 700;
-    font-size: 1.5em;
-    margin-top: 20px;
-}
-.div2{
-    height: 100vh;
-    width: 100%;
-    position: relative;
-    display: flex;
-    background-color: #2f2f2f;
-    overflow: hidden;
-}
-.p2{
+.boutton:hover {
     color: white;
-    font-weight: 600;
-    font-size: 2.5em;
+    background: #e91e63;
 }
-.p22{
-    font-weight: 600;
-    font-size: 2em;
-    color: #a7a7a7;
+
+
+/*     div 1      */
+
+.div1{
+    width: 100%;
+    height: 100vh;
+    background-color: #000000;
+    display: flex;
+    justify-content: space-between;
+    position: relative;
 }
-.div21{
-    position: absolute;
-    left: 13%;
-    top: 8%;
-}
-.div22{
+.div11{
+    color: white;
     position: absolute;
     left: 10%;
-    bottom: -15px;
+    top: 30%;
 }
-.div22 img {
-    width: 316px;
+.disc{
+    font-size: 1.4em;
+    margin-top: 20px;
+}
+.div111{
+    position: absolute;
+    right: -10%;
+    transform: translateX(5%);
+}
+
+/*     fin div 1      */
+
+
+
+/*     div 2      */
+.div2{
+    width: 100%;
+    height: 110vh;
+    display: flex;
+    justify-content: space-between;
+    padding: 30px;
+    padding-top: 100px;
+    overflow: hidden;
+    background-color: black;
+}
+.abt1{
+    display: none;
+}
+.div22{
+    display: flex;
+    height: 80vh;
+}
+.div22 img{
+    border-radius: 54px;
 }
 .div23{
-    width: 431px;
-    height: 437px;
-    position: absolute;
-    background-color: white;
-    border-radius: 0 90px 0 0;
+    padding-left: 50px;
+    color: #fff;
+    font-size: 20px;
+}
+/*     fin div 2      */
+
+
+
+
+
+/*     div 3      */
+.div3{
+    height: 110vh;
+    background-color: rgb(0, 0, 0);
+}
+.div31{
+    color: #fff;
+    text-align: center;
+}
+.div31 h1{
+    color: #e91e63;
+    padding-top: 70px;
+}
+.txt1{
     padding-top: 10px;
-    bottom: 10%;
-    right: 10%;
-    transform: translateX(-5%);
-    box-shadow: 20px -20px #EA5148;
 }
-.div23 label{
-    display: grid;
-    position:relative;
-    left:7%;
-    font-weight:600;
-    font-size:1.5em;
-    padding-top: 10px;
+.txt2{
+    padding-top: 5px;
 }
-.div23 input,textarea{
-    position: relative;
-    left: 7%;
-    width: 80%;
-    border: none ;
-    border-bottom: solid 2px #2F2F2F;
-    padding:3px;
-    padding-left: 5px;
+.txt2 a{
+    color: #e01e63;
+    font-weight: bold;
 }
-.btn1{
-    width: 370px;
-    height: 30px;
-    background-color: #EA5148;
-    border: #EA5148;
-    border-radius: 0 10px 0 0;
+.div32{
     position: absolute;
-    bottom: 4%;
-    left: 7%;
-    color: white;
-    font-size: 1em;
-    cursor: pointer;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 50%;
+    margin-top: 40px;
+    box-shadow: 10px -10px 60px  #e92e63;
+    border-radius: 30px;
+}
+.video{
+    width: 100%;
+    height: 100%;
+    border-radius: 30px;
+}
+/*     fin div 3      */
+
+
+
+/*     div 4      */
+.services-container{
+    width: 100%;
+    height: 60vh;
+    background-color: black;
     display: flex;
     justify-content: center;
     align-items: center;
+    gap: 80px;
 }
-.btn1 img {
-    position: absolute;
-    display: flex;
-    align-items: center;
-    left: 65%;
+.services-paln{
+    flex: 1;
+    background-color: #e91e63;
+    border-radius: 15px;
+    max-width: 204px;
+    height: 200px;
+    text-align: center;
+    padding: 10px;
+    box-shadow: 10px 10px 20px  #e92e63;
 }
-.btn2{
-    display: flex;
-    padding: 5px;
-    background-color: #2F2F2F;
+.plan-icon{
+    width: 80px;
+    height: 40px;
+    position: relative;
+    left: 27%;
+}
+.plan-title{
+    font-weight: bold;
+    font-size: 20px;
+    padding-top: 50px;
+}
+.plan-disc{
+    font-size: 15px;
+    color: #fff;
+    padding-top: 10px;
+}
+/*     fin div 4      */
+
+
+
+
+/*      div 5    */
+.contact{
+    height: 90vh;
+    background-color: #000000;
+    padding: 10px;
+    text-align: center;
+}
+.container{
+    max-width: 800px;
+    margin: 0 auto;
+}
+.container h2{
+    font-size: 36px;
+    color: #e91e63;
+    margin-bottom: 5px;
+}
+.contact-wrapper{
+    display: grid;
+    grid-gap: 30px;
+}
+.contact-form{
+    text-align: center;
+    width: 400px;
+}
+.contact-form h3{
+    font-size: 24px;
+    margin-bottom: 20px;
+    color: #ffffff;
+}
+.form-group{
+    margin-bottom: 20px;
+}
+input{
+    width: 100%;
+    padding: 12px;
+    border-radius: 8px;
+    border: none;
+    background-color: #f8f9fa;
+    color: #333;
+    border: 3px solid #e91e63;
+}
+textarea{
+    width: 100%;
+    height: 80px;
+    padding: 12px;
+    border-radius: 8px;
+    border: none;
+    background-color: #f8f9fa;
+    color: #333;
+    border: 2px solid #e91e63;
+    margin-bottom: 20px;
+}
+input:focus,
+textarea:focus{
+    outline: none;
+    box-shadow: 0 0 8px #bbb;
+}
+.contact button{
+    background-color: black;
+    border: none;
+    padding: 12px 24px;
+    color: #e91e63;
+    font-weight: bold;
+    border-radius: 15px;
+    font-size: 16 px;
     cursor: pointer;
+    border: solid 3px #e91e63;
+}
+button:hover{
+    background-color: #e91e63;
     color: white;
-    border: #2F2F2F;
+}
+
+/*   fin div 5    */
+
+
+
+
+/*     footer      */
+section{
+    display: flex;
+    justify-content: space-between;
+    background-color: rgb(0, 0, 0);
     align-items: center;
+    padding: 20px;
 }
-.btn2 a{
-    color: white;
+section .icons{
+    align-items: center;
+    display: flex;
+    gap: 20px;
 }
-.txt{
-    height:70px;
+.ready{
+    color: #fff;
+    font-weight: bold;
+}
+footer{
+    background-color: black;
+    color: #fff;
+    text-align: center;
+    padding: 10px;
+    position: relative;
+    bottom: 0;
+}
+footer a{
+    color: #e91e63;
+    font-weight: 400;
+}
+footer a:hover{
+    font-size: 1.2em;
+}
+/*     fin footer      */
 
-}
-@media (max-width : 767px){
+
+@media (max-width : 765px){
+    .parts{
+        display: none;
+    }
+    .boutton{
+        padding: 4px 7px;
+    }
     .div1{
-        height: 80vh;
+        height: 60vh;
     }
-    .divimg img {
-        width: 300px;
-        margin-top: 25%;
+    .div111 img{
+        width: 0;
     }
-    .divimg span {
-        font-size: 1em;
+    .div11{
+        top: 25%;
+        left: 4%;
     }
-    .div111 {
-        margin-top: 70px;
-    }
-    .div111 .p1 {
-        font-size: 1.8em;
-    }
-    .div111 .p11 {
-        font-size: 1em;
-    }
-    .p2{
-        font-size: 1.5em;
-    }
-    .p22{
-        font-size: 1.7em;
-    }
-    .div21{
-        position: absolute;
-        left: 13%;
-        top: 8%;
-    }
-    .div22{
-        position: absolute;
-        left: 10%;
-        bottom: -15px;
-    }
-    .div22 img {
-        width: 0px;
-    }
-    .div23{
-        width: 261px;
-        height: 340px;
-        box-shadow: 10px -10px #EA5148;
-        left: 50%;
-        transform: translateX(-50%);
-    }
-    .div23 label{
-        font-size:0.9em;
-    }
-    .btn1{
-        width: 230px;
-    }
-    .btn1 img {
-        position: absolute;
-        display: flex;
-        align-items: center;
-        left: 65%;
-    }
-    .btn2{
-        display: flex;
-        padding: 5px;
-        background-color: #2F2F2F;
-        cursor: pointer;
-        color: white;
-        border: #2F2F2F;
-        align-items: center;
-    }
-    .btn2 a{
-        color: white;
-    }
-    .txt{
-        height:40px;
-    }
-}
-
-
-@media (min-width : 768px) and (max-width : 1023px){
-    .div1{
-        height: 130vh;
-    }
-    .divimg img {
-        width: 690px;
-    }
-    .divimg span {
-        left: 43%;
-    }
-    .div21{
-        left: 6%;
-        top: 8%;
+    .div11 img{
+        width: 240px;
     }
     .div2{
-        height: 160vh;
-    }
-    .div22 img {
-        width: 0px;
+        flex-direction: column;
+        height: 100%;
+    }.div22{
+        height: 70vh;
+        height: 340px;
+    }   
+    .div22 img{
+        border-radius: 54px;
+        width: 200px;
+        height: 340px;
     }
     .div23{
-        width: 261px;
-        height: 340px;
-        box-shadow: 10px -10px #EA5148;
-        left: 50%;
-        transform: translateX(-50%);
+        padding-left: 0;
+        padding-top: 10px;
     }
-    .div23 label{
-        font-size:0.9em;
-    }.btn1{
-        width: 230px;
+    .abt1{
+        display: flex;
+        padding-top: 30px;
     }
-    .txt{
-        height:40px;
+    .abt2{
+        display: none;
+        font-size: 1px;
     }
-    .p2{
-        font-size: 1.4em;
+    .div3{
+        height: 80vh;
     }
-    .p22{
-        font-size: 1.6em;
+    .div32{
+        width: 80%;
+        margin-top: 40px;
+    }
+    .txt1{
+        font-size: 14px;
+    }
+    .txt2{
+        font-size: 14px;
+    }
+    .services-container{
+        flex-direction: column;
+        height: 100%;
+        padding-top: 30px;
+    }
+    section .icons{
+        display: flex;
+        gap: 2px;
+    }
+    .ready{
+        font-size: 0.8em;
+    }
+    .ready img{
+        width: 10px;
+    }
+    #sm{
+        width: 100px;
+        gap: 10px;
+        margin-right: 30px;
+    }
+    .contact-form{
+        text-align: center;
+        width: 290px;
+    }
+}
+@media (min-width : 766px) and (max-width : 1023px){
+    header{
+        padding: 30px 10px;
+    }
+    .div11 img{
+        width: 80%;
+    }
+    .div111{
+        bottom: 0;
+        right: 2%;
+    }
+    .div111 img{
+        width: 280px;
+    }
+    .div3{
+        height: 100vh;
+    }
+    .div31 h1{
+        padding-top: 0px;
+    }
+    .txt1{
+        padding-top: 0px;
+    }
+    .txt2{
+        padding-top: 0px;
+    }
+    .div32{
+        margin-top: 15px;
+    }
+    .disc{
+        font-size: 1.1em;
+    }
+    .contact{
+        height: 100%;
+    }
+    .services-containet{
+        height: 100%;
     }
 }
 
-
-
-/*@media (min-width : 1024px) and (max-width : 1280px){
-
-}
-*/
-/*@media (min-width : 1281px) and (max-width : 1599px){
-}
-*/
-
-
-
-    @media (min-width : 1600px) {
-        .div1{
-            height: 100vh;
-        }
-        .divimg img {
-            width: 1400px;
-        }
-        .divimg span {
-            font-size: 4.5em;
-        }
-        .div111 .p1 {
-            font-size: 5.5em;
-        }
-        .div111 .p11 {
-            font-size: 2.5em;
-        }
-        .p2{
-            font-size: 3.5em;
-        }
-        .p22{
-            font-size: 2.7em;
-        }
-        .div22{
-            left: 5%;
-            bottom: -20px;
-        }
-        .div22 img {
-            width: 500px;
-        }
-        .div23{
-            width: 561px;
-            height: 640px;
-            box-shadow: 30px -30px #EA5148;
-        }
-        .div23 label{
-            font-size:1.9em;
-        }
-        .btn1{
-            width: 490px;
-        }
-        .btn2 a{
-            color: white;
-        }
-        .txt{
-            height:140px;
-        }
+@media (min-width : 1600px){
+    .div111 img{
+        width: 1000px;
     }
+    .parts{
+        gap: 100px;
+    }
+    .contact-form{
+        width: 600px;
+    }
+    .contact button{
+        padding: 7px 39px;
+        font-size: 17px;
+    }
+}
